<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="pruebatalento.operations.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pruebatalento.operations.login.LoginFragment"
        android:forceDarkAllowed="false"
        android:background="@color/colorPrimaryDark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsername"
                style="@style/PadelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_40"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_30"
                android:drawableRight="@drawable/ic_user_icon"
                android:hint="@string/login_username"
                android:text="@={viewModel.username}"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPwd"
                style="@style/PadelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_40"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_30"
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/login_password"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingLeft="@dimen/padding_10"
                android:text="@string/login_register"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPwd" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/RobotoButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_30"
                android:onClick="@{() -> viewModel.callLogin()}"
                android:text="@string/login_btn"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAccessProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_problems"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:drawableTop="@drawable/ic_access_problem"
            android:drawablePadding="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>