<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context="pruebatalento.operations.characterdetail.CharacterDetailFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_lay"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/statusBarPadding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/marvelImgDetail"
                android:layout_width="180sp"
                android:layout_height="180sp"
                android:layout_marginTop="@dimen/dimension_object_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimension_object_10"
            android:layout_marginRight="@dimen/dimension_object_10"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_20"
                android:text="@string/char_detail_desc"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:text="@string/default_description"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescDetailTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSeriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_20"
                android:text="@string/char_detail_series"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescDetail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSeriesDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:layout_marginLeft="@dimen/dimension_object_5"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/size_text_20"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvSeriesTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDescDetail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvComicsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_20"
                android:text="@string/char_detail_comics"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSeriesTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvComicsDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:layout_marginLeft="@dimen/dimension_object_5"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/size_text_20"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvComicsTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvSeriesTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStoriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_20"
                android:text="@string/char_detail_stories"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvComicsTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStoriesDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:layout_marginLeft="@dimen/dimension_object_5"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/size_text_20"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvStoriesTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvComicsTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEventsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_20"
                android:text="@string/char_detail_events"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStoriesTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEventsDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:layout_marginLeft="@dimen/dimension_object_5"
                android:layout_marginTop="@dimen/dimension_object_5"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/size_text_20"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvEventsTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvStoriesTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>